Added b/e edit functionality